--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "app.json": "^1.2.1",
     "express": "^3.4.8",
     "nodeo": "0.0.5",
-    "winston": "^0.9.0",
-    "winston-irc": "^0.3.4",
-    "winston-loggly": "^1.1.0"
+    "winston": "^0.9.0"
   },
   "engines": {
     "node": ">=0.10.x",
