--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JJ/splash-volunteer"
+    "url": "https://github.com/NodeoIO/NodIO"
   },
   "keywords": [
     "node",
@@ -30,8 +30,9 @@
   ],
   "author": "Mark Pundsack modified by JJ Merelo",
   "contributors": [
-    "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)",
-    "JJ Merelo <jjmerelo@gmail.com> (http://jj.github.io)"
+      "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)",
+      "JJ Merelo <jjmerelo@gmail.com> (http://jj.github.io)",
+      "Mario García Valdez, <mariosky@gmail.com>"
   ],
   "license": "MIT",
   "devDependencies": {
