--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "app.json": "^1.2.1",
     "express": "^3.4.8",
     "nodeo": "0.2.1",
-    "winston": "^0.9.0"
+    "winston": "^0.9.0",
+    "winston-papertrail": "^1.0.2"
   },
   "engines": {
     "node": ">=0.10.x",
@@ -30,9 +31,9 @@
   ],
   "author": "Mark Pundsack modified by JJ Merelo",
   "contributors": [
-      "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)",
-      "JJ Merelo <jjmerelo@gmail.com> (http://jj.github.io)",
-      "Mario García Valdez, <mariosky@gmail.com>"
+    "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)",
+    "JJ Merelo <jjmerelo@gmail.com> (http://jj.github.io)",
+    "Mario García Valdez, <mariosky@gmail.com>"
   ],
   "license": "MIT",
   "devDependencies": {
