--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "app.json": "^1.2.1",
     "express": "^3.4.8",
+    "leroux-cache": "^0.1.1",
     "nodeo": "0.2.1",
     "winston": "^0.9.0",
     "winston-papertrail": "^1.0.2"
